updated project summary

--- a/GSS Project Code.ipynb
+++ b/GSS Project Code.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "LEPgKb7bapmz",
       "metadata": {
         "colab": {
@@ -93,6 +93,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        ">Our groups’ research question is as follows: “How does confidence in a select number of US institutions change with race, age, or gender?” After looking through the General Social Survey’s list of variables, we identified twelve detailing the confidence the public had in particular institutions such as banks/financial institutions, major companies, organized religion, education, the federal government, and the scientific community. We thought it would be interesting to examine this in the context of demographic variables such as age, race, and gender as well as questions that asked for a participant’s opinion on some topic. Essentially, we considered the confidence in an institution based on how a person responded to the above questions types. Each variable was examined using functions such as “value_counts()” and “describe()”. More cleaning was completed, and it was discovered that a large number of NANs existed because of questions that are not on the survey every year (more information in the Data Cleaning section). Responses to those questions were narrowed down using the “year” variable.  \n",
+        "\n",
+        "\n",
+        ">For visualizations, histograms were created for our variables of interest (note: figure sizes are small for scrolling purposes and can be expanded if necessary). We sorted the twelve institutions based on federal government versus non-government entities. Confidence selection choices were as follows: hardly any, only some, and a great deal. Overall, the median option (“only some” confidence) had the highest number of votes across every institution that we examined. As a second step, we investigated the demographic variables in the same context. Looking at these results, who citizens voted for in the 2020 presidential election (Biden vs Trump) and their confidence in institutions had the most surprising trends. Therefore, we examined their vote choice and confidence in all institutions listed. Responses to this question includes survey answers from 2020 and onward since prior participants did not have an opportunity to answer the question. Participants who voted for Biden tended to select the moderate option choice when determining their confidence in an institution. In general, a majority of respondents voted for Biden, but those who voted for Trump had significantly less confidence in the executive branch and more in the judicial branch."
+      ],
+      "metadata": {
+        "id": "2ymRO45hsf5f"
+      },
+      "id": "2ymRO45hsf5f"
+    },
+    {
+      "cell_type": "markdown",
       "id": "b7LgkUOH-j9j",
       "metadata": {
         "id": "b7LgkUOH-j9j"
@@ -150,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "fc41bbad-c13f-4faa-832d-92919ded7e56",
       "metadata": {
         "id": "fc41bbad-c13f-4faa-832d-92919ded7e56",
@@ -173,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "5ec550e6-26d3-472e-83a7-d5fa1ae81dbc",
       "metadata": {
         "colab": {
@@ -201,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "a635e45e-e869-486d-8ab6-2a2bc0fc85a9",
       "metadata": {
         "colab": {
@@ -617,7 +630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "2f9e5994-1dad-42b8-8774-ab63c35b5b5b",
       "metadata": {
         "id": "2f9e5994-1dad-42b8-8774-ab63c35b5b5b",
@@ -645,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "530333ab-524a-4169-87ee-0c0170b54939",
       "metadata": {
         "id": "530333ab-524a-4169-87ee-0c0170b54939",
@@ -667,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "1354bbe2-dcfe-42f3-b440-57830f9cea8b",
       "metadata": {
         "colab": {
@@ -1159,7 +1172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "ac7c5174-4e1a-44ca-8f3f-60fbc7a31207",
       "metadata": {
         "tags": [],
@@ -1183,7 +1196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "TdgZ21LuAOya",
       "metadata": {
         "colab": {
@@ -1229,7 +1242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "JBT1KxTQIvOm",
       "metadata": {
         "colab": {
@@ -1266,7 +1279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "YXI-dY9LLYA2",
       "metadata": {
         "colab": {
@@ -1303,7 +1316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "id": "CRtsub8gMF3e",
       "metadata": {
         "colab": {
@@ -1350,7 +1363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "id": "bbBe6W-INDfY",
       "metadata": {
         "colab": {
@@ -1387,7 +1400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "e_wO5QymNOQQ",
       "metadata": {
         "colab": {
@@ -1424,7 +1437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "id": "5H9js9ZyNiKw",
       "metadata": {
         "colab": {
@@ -1461,7 +1474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "Mueb40ymQ_gK",
       "metadata": {
         "colab": {
@@ -1498,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "ZhENPFZNTylo",
       "metadata": {
         "colab": {
@@ -1562,7 +1575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "47c14607-456b-478a-8cfa-f7cc69c86230",
       "metadata": {
         "id": "47c14607-456b-478a-8cfa-f7cc69c86230"
@@ -1574,7 +1587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "4571199b-1e33-43c8-a07c-8b27be1986f4",
       "metadata": {
         "tags": [],
@@ -1974,7 +1987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "5b8fee2d-5650-446a-9f91-5d2e3d144efb",
       "metadata": {
         "tags": [],
@@ -2030,7 +2043,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "a1d8723d-b44d-4c68-8f36-c7c83ed8ebfc",
       "metadata": {
         "id": "a1d8723d-b44d-4c68-8f36-c7c83ed8ebfc"
