--- a/GSS Project Code.ipynb
+++ b/GSS Project Code.ipynb
@@ -2042,14 +2042,17 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "a1d8723d-b44d-4c68-8f36-c7c83ed8ebfc",
+      "cell_type": "markdown",
+      "source": [
+        ">From the panel of twelve histograms depicting who a person voted for and their confidence in a particular institution, several things stood out. In eleven out of the twelve cases, people who voted for Biden had selected the “only some” confidence choice more than Trump voters. This could indicate Biden voters tend to select moderate option choices more often than the two extremes (“a great deal”, “hardly any”). When it comes to federal institutions, both voter populations leaned towards having a lower amount of confidence in all three branches of the government; however, this trend was flipped for the army. Lastly, when examining the trends in the line plot, a majority of the institutions that we looked at experienced a decline in confidence from when the GSS first began in 1972 to our current time.\n",
+        "\n",
+        "\n",
+        "> There are some considerations to take into account with our information. Although the GSS strives to incorporate a diverse range of demographics, for our confidence questions, a majority of the respondents were white, and a majority were married. The variables that we examined (excluding the pres20 variable) are used in questions each year, ensuring longitudinal results. However, the data may not accurately capture the broader political or social impacts of a particular time period that could affect the statistics for a certain year. Additionally, since the pres20 variable is newer and only 2-3 thousand people are surveyed each year, a larger sample size might have a different effect on what we are able to see.\n"
+      ],
       "metadata": {
-        "id": "a1d8723d-b44d-4c68-8f36-c7c83ed8ebfc"
+        "id": "XD66l7Lx9LUK"
       },
-      "outputs": [],
-      "source": []
+      "id": "XD66l7Lx9LUK"
     }
   ],
   "metadata": {
