--- a/GSS Project Code.ipynb
+++ b/GSS Project Code.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "LEPgKb7bapmz",
       "metadata": {
         "colab": {
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "fc41bbad-c13f-4faa-832d-92919ded7e56",
       "metadata": {
         "id": "fc41bbad-c13f-4faa-832d-92919ded7e56",
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "5ec550e6-26d3-472e-83a7-d5fa1ae81dbc",
       "metadata": {
         "colab": {
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "a635e45e-e869-486d-8ab6-2a2bc0fc85a9",
       "metadata": {
         "colab": {
@@ -630,7 +630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "2f9e5994-1dad-42b8-8774-ab63c35b5b5b",
       "metadata": {
         "id": "2f9e5994-1dad-42b8-8774-ab63c35b5b5b",
@@ -658,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "530333ab-524a-4169-87ee-0c0170b54939",
       "metadata": {
         "id": "530333ab-524a-4169-87ee-0c0170b54939",
@@ -680,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "1354bbe2-dcfe-42f3-b440-57830f9cea8b",
       "metadata": {
         "colab": {
@@ -1172,7 +1172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "ac7c5174-4e1a-44ca-8f3f-60fbc7a31207",
       "metadata": {
         "tags": [],
@@ -1196,7 +1196,7 @@
         "id": "2Rm-s-Din_dg"
       },
       "id": "2Rm-s-Din_dg",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1211,7 +1211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "TdgZ21LuAOya",
       "metadata": {
         "colab": {
@@ -1256,8 +1256,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Across every single institution, the predominant confidance selection was \"only some\". For half of the governmental institutions (particularly legis and fed) the second highest confidence selection was \"hardly any\"; while judge and army display a greater selection of \"a great deal\" than \"hardly any\". In great contrast, 6 non-governmental istitutions (sci, medic, bus, clerg, educ, finan) display greater numbers of \"a great deal\" of confidence than \"hardly any\" confidence. The remaining non-governmental institutions, labor and press, have greater numbers for \"hardly any\" confidence than for \"a great deal\" of confidence.\n",
+        "\n",
+        "While concrete conclusions can't be drawn solely off these observations, some hypotheses can be made. Specifically, it seems that people generally criticize governmental insititutions more-so than non-governmental institutions, maybe because these are institutions backed by more national funding and, thus, should showcase this in their quality of work. Across the board, institutions that deal with representing the public voice (such as legis, press, labor, and fed) showcase much less confidence from the people than institutions that provide humanitarian services (such as medic, educ, sci, and army). This trend could showcase how public needs and wants aren't accurately being addressed nor met by the institutions who claim to do so, regardless of the institution being governmental or not."
+      ],
+      "metadata": {
+        "id": "Kma_m-HL74Qc"
+      },
+      "id": "Kma_m-HL74Qc"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "JBT1KxTQIvOm",
       "metadata": {
         "colab": {
@@ -1293,8 +1305,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Across every single gov. institution, women display higher counts in each confidence category. This could imply that women are \"more opinionated\" than men, but more likely than not, more women were surveyed than men; making these graphs, in terms of analyzing counts, not the most efficient. However, there's still a general trend to be observed: men and women have very similar ratios between each confidence qualifier across all gov. institutions! This could demonstrate how gender doesn't significantly impact public opinion on the above governmental institutions."
+      ],
+      "metadata": {
+        "id": "zDYGEZYD_gpn"
+      },
+      "id": "zDYGEZYD_gpn"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "YXI-dY9LLYA2",
       "metadata": {
         "colab": {
@@ -1330,8 +1352,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "As"
+      ],
+      "metadata": {
+        "id": "YxEpCWFVC_eF"
+      },
+      "id": "YxEpCWFVC_eF"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "CRtsub8gMF3e",
       "metadata": {
         "colab": {
@@ -1378,7 +1410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "bbBe6W-INDfY",
       "metadata": {
         "colab": {
@@ -1415,7 +1447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "e_wO5QymNOQQ",
       "metadata": {
         "colab": {
@@ -1452,7 +1484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "5H9js9ZyNiKw",
       "metadata": {
         "colab": {
@@ -1489,7 +1521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "Mueb40ymQ_gK",
       "metadata": {
         "colab": {
@@ -1526,7 +1558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "ZhENPFZNTylo",
       "metadata": {
         "colab": {
@@ -1590,7 +1622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "4571199b-1e33-43c8-a07c-8b27be1986f4",
       "metadata": {
         "tags": [],
@@ -1990,7 +2022,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "5b8fee2d-5650-446a-9f91-5d2e3d144efb",
       "metadata": {
         "tags": [],
