--- a/GSS Project Code.ipynb
+++ b/GSS Project Code.ipynb
@@ -1354,7 +1354,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As"
+        "As demonstrated in the previous graphical set, one demographic was surveyed more than the rest of the demographics (white people were surveyed more-so than black people or other races), making the counts themselves difficult to compare to each other. In terms of general trends, all races display similar ratios between confidence qualifiers across all governmental institutions! This trend was observed with gender, and could indicate that racial differences don't impact public opinion on the above governmental institutions.\n",
+        "\n",
+        "What's good to note, however, is that the disproportionate surveying of white people could lead to other survey results not accurately reflecting all demographics within the United States. In terms of broader applications, this means that any conclusions drawn from the subsequent graphs shouldn't be generalized to the entire U.S. population."
       ],
       "metadata": {
         "id": "YxEpCWFVC_eF"
